SSC-2081 modal fix lg modal to avoid content truncated

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
@@ -137,6 +137,6 @@
 
 @media (min-width: @screen-md-min) {
     .modal-lg {
-        width: @modal-lg;
+        width: 90%;
     }
 }
